--- a/index.html
+++ b/index.html
@@ -11,21 +11,222 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="conteanir header__wrap">
-                <h3 class="logo__h">Atelier.</h3>
-            <div class="header__nav">
-                <ul class="nav">
-                    <li class="nav__list"><a href="#" class="nav__link">Overview</a></li>
-                    <li class="nav__list"><a href="#" class="nav__link">Pages</a></li>
-                    <li class="nav__list"><a href="#" class="nav__link">Portfolio</a></li>
-                    <li class="nav__list"><a href="#" class="nav__link">Template</a></li>
-                    <li class="nav__list"><a href="#" class="nav__link">Contact</a></li>
+    <header>
+        <div class="container header__wrap">
+            <div class="logo">
+                <a href="#" class="atel">Atelier.</a>
+                <ul class="menu__head">
+                    <li class="list__head"><a href="#" class="link__head">Overview</a></li>
+                    <li class="list__head"><a href="#" class="link__head">Pages</a></li>
+                    <li class="list__head"><a href="#" class="link__head">Portfolio</a></li>
+                    <li class="list__head"><a href="#" class="link__head">Template</a></li>
+                    <li class="list__head"><a href="#" class="link__head">Contact</a></li>
                 </ul>
-                    <button class="nav__btn">Buy Template</button>
             </div>
+            <a href="#" class="buy">Buy Template</a>
         </div>
     </header>
+    <section class="banner">
+        <div class="container banner__wrap">
+            <h5 class="h5__banner">WE ARE Atelier Creative Agency</h5>
+            <h1 class="h1__banner">Unique UI Kit Template for Creative Agencies</h1>
+            <a href="#" class="btn__banner">VIEW LAYOUTS</a>
+        </div>
+    </section>
+    <section class="port">
+        <div class="container port__wrap">
+            <h4 class="h4__port">Our Core Layouts</h4>
+            <h2 class="h2__port">Template Pages</h2>
+
+            <div class="port__cards">
+                <div class="card__port">
+                    <img src="./img/cerd1.png" alt="">
+                    <h4 class="card__h4">Landing vr.1</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd2.png" alt="">
+                    <h4 class="card__h4">Landing vr.2</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd3.png" alt="">
+                    <h4 class="card__h4">Landing vr.3</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd4.png" alt="">
+                    <h4 class="card__h4">Portfolio 1</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd5.png" alt="">
+                    <h4 class="card__h4">Portfolio 1</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd6.png" alt="">
+                    <h4 class="card__h4">Portfolio 1</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd7.png" alt="">
+                    <h4 class="card__h4">Portfolio 1</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd8.png" alt="">
+                    <h4 class="card__h4">Single Project</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd9.png" alt="">
+                    <h4 class="card__h4">About Company</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd10.png" alt="">
+                    <h4 class="card__h4">About TEam</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd11.png" alt="">
+                    <h4 class="card__h4">Single Team Member</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd12.png" alt="">
+                    <h4 class="card__h4">FAQ PAge</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd13.png" alt="">
+                    <h4 class="card__h4">Contact Us</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd14.png" alt="">
+                    <h4 class="card__h4">Blog 1</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd15.png" alt="">
+                    <h4 class="card__h4">Blog 2</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd16.png" alt="">
+                    <h4 class="card__h4">Blog 3</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd17.png" alt="">
+                    <h4 class="card__h4">Blog Categories</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd18.png" alt="">
+                    <h4 class="card__h4">Single Blog</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd19.png" alt="">
+                    <h4 class="card__h4">Pricing</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd20.png" alt="">
+                    <h4 class="card__h4">Style guide</h4>
+                </div>
+                <div class="card__port">
+                    <img src="./img/cerd21.png" alt="">
+                    <h4 class="card__h4">Licenses</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <img src="./img/jobs.png" alt="" class="ruki">
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <h5 class="serv__h5"> Our Core Features</h5>
+            <h1 class="serv__h1">Our Services</h1>
+            <div class="serv__wrap">
+                <div class="card">
+
+                    <img src="./img/triug.png" alt="" class="card__img">
+                    <h3 class="h3__cards">Web Design</h3>
+                    <h4 class="h4__card">Suspendisse varius enim in</h4>
+                    <p class="p__card">cursus id rutrum imperdiet. eros elementum tristique.</p>
+
+                </div>
+                <div class="card__two">
+
+                    <img src="./img/polgrug.png" alt="" class="card__img">
+                    <h3 class="h3__cards">UI/UX Design</h3>
+                    <h4 class="h4__card">Suspendisse varius enim in</h4>
+                    <p class="p__card">cursus id rutrum imperdiet. eros elementum tristique.</p>
+
+                </div>
+                <div class="card__free">
+
+                    <img src="./img/krug.png" alt="" class="card__img">
+                    <h3 class="h3__cards">SEO & Marketing</h3>
+                    <h4 class="h4__card">Suspendisse varius enim in</h4>
+                    <p class="p__card">cursus id rutrum imperdiet. eros elementum tristique.</p>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container wrap__img">
+            <div class="img1">
+                <img src="./img/famili.png" alt="">
+                <img src="./img/tt.png" alt="">
+            </div>
+            <div class="ssilka">
+                <a href="#" class="fol">Follow me on</a>
+
+                <a href="#" class="btn__a">Instagram</a>
+            </div>
+            <div class="img2">
+                <img src="./img/mm.png" alt="">
+                <img src="./img/creslo.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container wrap__btn">
+            <h1 class="h1__btn">Subscribe to Atelier Newsletter</h1>
+            <p class="p__btn">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                elementum tristique.</p>
+
+            <div class="btn__end">
+                <div class="btn__yel"></div>
+            </div>
+            <div class="text__t">
+                <p class="p__text">
+                    * By clicking <span class="text__span">“Subscribe”</span>
+
+
+                    <span class="span__t3">button, you agree to our Terms and that you have read our
+                        <span class="text__span2">Data Use Policy.</span>
+                    </span>
+                </p>
+            </div>
+
+        </div>
+        <div class="mes">
+            <div class="mesen"><img src="./img/face.png" alt=""></div>
+            <div class="mesen"><img src="./img/twit.png" alt=""></div>
+            <div class="mesen"><img src="./img/in.png" alt=""></div>
+            <div class="mesen"><img src="./img/inn.png" alt=""></div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="footer__wrap">
+                <div class="foot">
+                    <p class="foot__p">Powered by
+                        <span class="span__foot">Webflow</span>
+                    </p>
+
+                </div>
+                <div class="foot2">
+                    <ul class="menu__foot">
+                        <li class="foot__list"><a href="#" class="foot__link"> Licenses</a></li>
+                        <li class="foot__list"><a href="#" class="foot__link"> Style Guide</a></li>
+                        <li class="foot__list"><a href="#" class="foot__link">Instruction </a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
